# RtlDebugBench

./: .gitignore  BenchmarkInfo.md  README.md  pyproject.toml
script/: collect_repos.py
src/s1_collection/: README.md  __init__.py  s1_01_fetch_prs.py  s1_02_filter_by_issues.py  s1_03_fetch_issues.py  s1_04_merge.py  s1_05_extract_patches.py  s1_06_filter_patches.py  s1_pipeline.py  util.py
src/s2_input_construction/: __init__.py  git_utils.py  llm_client.py  parsers.py  repo_config.yaml  s2_01_fetch_materials.py  s2_02_select_docs.py  s2_03_generate_spec.py  s2_04_review_spec.py  s2_pipeline.py
tests/s1_collection/: test_s1_06_filter_patches.py
tests/s2_input_construction/: test_git_utils.py  test_llm_client.py  test_parsers.py  test_s2_01_fetch_materials.py  test_s2_02_select_docs.py  test_s2_pipeline.py
