[project]
name = "rtldebugbench"
version = "0.1.0"
description = "RTL Debug Benchmark construction pipeline"
requires-python = ">=3.10"
dependencies = [
    "PyGithub>=2.0",
    "unidiff>=0.7",
    "requests>=2.31",
    "tqdm>=4.66",
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-mock>=3.12",
    "responses>=0.24",
]

